; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote-vx.c_net_get_boot_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote-vx.c_net_get_boot_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VX_BOOT_FILE_INQ = common dso_local global i32 0, align 4
@xdr_void = common dso_local global i32 0, align 4
@xdr_wrapstring = common dso_local global i32 0, align 4
@RPC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @net_get_boot_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @net_get_boot_file(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i32, align 4
  store i8** %0, i8*** %2, align 8
  %4 = load i32, i32* @VX_BOOT_FILE_INQ, align 4
  %5 = load i32, i32* @xdr_void, align 4
  %6 = load i32, i32* @xdr_wrapstring, align 4
  %7 = load i8**, i8*** %2, align 8
  %8 = call i32 @net_clnt_call(i32 %4, i32 %5, i8* null, i32 %6, i8** %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @RPC_SUCCESS, align 4
  %11 = icmp eq i32 %9, %10
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i32 0, i32 -1
  ret i32 %13
}

declare dso_local i32 @net_clnt_call(i32, i32, i8*, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
